languages/montiarc-fe/src/test/resources/unused/contextconditions/invalid/Test.java
package invalid;

import invalid.SuperTest;

//TODO: Unused?
public class Test extends SuperTest {
  private Integer a = 5;
  
  public Integer get(){
    return this.a;
  }
  
}